--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		</script>
 	</head>
 	<body onload="clock()">
+		<h1>欢迎观看李红的计时器</h1>
 		<form name="form1" method="post">
 			<input type="text" name="myClock" readonly="readonly"/>	<br />
 			<input type="button" value="开始"  onclick="clock()"/><input type="button" id="but1" value="暂停"  onclick="sptr()"/>	
